# Learning_System

./: .gitignore  alembic.ini  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 4d2024ded4ff_.py  8970367828d9_moving_is_active_to_user_table.py
api/: courses.py  sections.py  users.py
api/utils/: courses.py  user.py
db/: db_setup.py
db/models/: course.py  user.py
pydantic_schemas/: user_control.py
