[tool.poetry]
name = "learn-fastapi"
version = "0.1.0"
description = ""
authors = ["ezran2022 <ntwariezraa@gmail.com>"]
readme = "README.md"
packages = [{include = "learn_fastapi"}]

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = "^0.19.0"
fastapi = "^0.85.2"
pydantic = "^1.10.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
