[tool.poetry]
name = "learn-fastapi"
version = "0.1.0"
description = ""
authors = ["ezran2022 <ntwariezraa@gmail.com>"]
readme = "README.md"
packages = [{include = "learn_fastapi"}]

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = "^0.19.0"
fastapi = "^0.85.2"
pydantic = "^1.10.2"
sqlalchemy = "^1.4.42"
psycopg2-binary = "^2.9.5"
sqlalchemy-utils = "^0.38.3"
alembic = "^1.8.1"
alembic-autogen-check = "^1.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
